# localops-copilot

./: .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  README.md  RELEASE_GATE_REPORT.md  VERIFICATION_REPORT.md  docker-compose.yml  next.md  pyproject.toml  pyrightconfig.json  requirements.txt  trivy.yaml  verify.sh
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py
apps/api/app/: main.py
apps/api/app/core/: config.py  metrics.py  security.py
apps/api/app/db/: session.py
apps/api/app/db/models/: __init__.py  artifact.py  audit.py  plan.py  project.py  run.py  run_step.py
apps/api/app/schemas/: plan.py  project.py  run.py  search.py
apps/api/app/services/: tasks.py
apps/api/app/services/executor/: policies.py
apps/api/app/state/: machine.py
apps/api/tests/: test_integration_flow.py  test_policies.py  test_state_machine.py
apps/web/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/planner/: page.tsx
apps/web/app/runs/[id]/: page.tsx
apps/web/lib/: api.ts
apps/worker/: Dockerfile
apps/worker/tests/: test_worker_import.py
apps/worker/worker/: celery_app.py  runner.py
data/artifacts/1/: audit.json
data/artifacts/2/: audit.json
data/logs/1/: 1.out
data/reports/1/: report.md
data/reports/2/: report.md
docs/: api.md  architecture.md  openapi.yaml  project-audit.md  runbook.md  threat-model.md  ws-protocol.md
infra/docker/sandbox-runner/: Dockerfile
scripts/: dev.sh
(+7 files in other folders)
