[project]
name = "localops-copilot"
version = "0.1.0"
description = "LocalOps Copilot MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.37",
  "alembic==1.14.1",
  "psycopg[binary]==3.2.3",
  "pydantic==2.10.5",
  "pydantic-settings==2.7.1",
  "redis==5.2.1",
  "celery==5.4.0",
  "prometheus-client==0.21.1",
  "python-multipart==0.0.20",
  "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
  "ruff==0.9.2",
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "apps/worker/tests"]
pythonpath = ["apps/api", "apps/worker"]
markers = ["integration: integration tests requiring running services"]
asyncio_default_fixture_loop_scope = "function"
